step 3-4 is completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <h1 id="title">Survey Form </h1>
     <p id="description"> This is Ibrohim and Azeez trial survey form</p>
+    <form action="" id="survey-form">
+      <input type="name" placeholder="Your Name" id="name" required>
+
+    </form>
 
     -->
     <script  src="js/index.js"></script>
