--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p id="description"> This is Ibrohim and Azeez trial survey form</p>
     <form action="" id="survey-form">
       <input type="name" placeholder="Your Name" id="name" required>
+      <input type="email" name="Email" id="email" placeholder="your email" required>
 
     </form>
 
