--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
 
       <label for="email-label" id="email-label" name="Email"><input type="email" name="Email" id="email" placeholder="your email" required>Email</label>
 
-      <label for="number-label" id="number-label" name="Number"><input type="number" name="number" id="number" required min="10" max="250">Number</label>
+      <label for="number-label" id="number-label" name="Number"><input type="number" name="number" id="number" required min="10" max="250" placeholder="Input Number">Number</label>
 
+      <select name="dropdown" id="dropdown">
+        <option value="first-list">First List</option>
+        <option value="second-list">Second List</option>
+      </select>
+
+      <label for="Check">First Check <input type="radio" name="Check" id="radio"></label>
+      <label for="Check">Second Check <input type="radio" name="Check" id="radio"></label>
+
+      <label for="Click">First Check <input type="radio" name="Click" id="radio"></label>
+      <label for="Click">Second Check <input type="radio" name="Click" id="radio"></label>
 
     </form>
 
