--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
         <option value="second-list">Second List</option>
       </select>
 
+     <form>    
       <label for="Check">First Check <input type="radio" name="Check" id="radio"></label>
       <label for="Check">Second Check <input type="radio" name="Check" id="radio"></label>
+    </form> 
 
+    <form>
       <label for="Click">First Check <input type="radio" name="Click" id="radio"></label>
       <label for="Click">Second Check <input type="radio" name="Click" id="radio"></label>
+    </form>
 
     </form>
 
