final step complete

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <input id="other" type="checkbox" name="gender" value="other">
       </label>
 
+      <textarea id="text" name="textarea" value="text" rows="4" cols="50">add additional text here</textarea>
+      
+      <button type="submit" id="submit" value="submit">Submit</button>
+
     
 
     </form>
